# Multi-Organ-Tumor-Segmentation-Application

./: .gitignore  main.py  pyproject.toml
.torrent/: BRATS2015-c4f39a0a8e46e8d2174b8a8a81b9887150f44d50.torrent  LITS17-27772adef6f563a1ecc0ae19a528b956e6c803ce.torrent  MICCAI_BraTS_2018_Data_Training.zip-a9e2741587d42ef6139aa474a95858a17952b3a5.torrent  MICCAI_BraTS_2018_Data_Validation.zip-a5912da845c7d7bec9bd0880c17ddda789ba35d5.torrent  NSCLC-Radiomics-dab2bec8e2e96350813ecb590b563778df82122d.torrent
2sm/model/classification_model/: builder.py
app/MOTSA/: bun.lockb  package.json  vite.config.ts
app/MOTSA-WebApp/: package.json
app/MOTSA/resource/: db.sql
app/MOTSA/src/: App.vue
app/MOTSA/src-tauri/: Cargo.toml  tauri.conf.json
data/: create_fastvit_dataset.ipynb
data/download/script/: BraTS20.sh  LiTS17.py  MOTSA_classification.sh  Pancreas.sh
modules/ccl3d/: connected-components-3d.c  setup.py
modules/ccl3d/ccl3d.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
modules/ccl3d/connected_components_3d.egg-info/: PKG-INFO  SOURCES.txt
modules/n2i/: n2i.c  setup.py
modules/n2i/n2i.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
multi_organ_tumor_segmentation_application.egg-info/: PKG-INFO  SOURCES.txt
output/: get_checkpoint_fastvit.sh
terraform/: grafana.tf  minio.tf  postgres.tf  prometheus.tf  redis.tf
test/models/: __init__.py  cls_m.py  seg_m.py  tsmm.py
test/utils/: ccl3d_test.py
tsm/: .gitignore
tsm/model/: builder.py  tsm.py  utils.py
tsm/train/: train_fastvit.py  train_sam2.py  utils.py
tsm/train/fastvit/: train.py  (+3 more)
(+47 files in other folders)
